Put a NEWS section on the main page, for common stuff

--- a/_posts/2006-01-30-igraph-0.1-r.markdown
+++ b/_posts/2006-01-30-igraph-0.1-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.1
+title: R/igraph 0.1
 date: January 30, 2006
 category: r
 ---
 
-igraph 0.1
-=========
+R/igraph 0.1
+============
 
 January 30, 2006
 
