--- a/_posts/2006-08-18-igraph-0.2-c.markdown
+++ b/_posts/2006-08-18-igraph-0.2-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.2
+title: C/igraph 0.2
 date: August 18, 2006
 category: c
 ---
 
-igraph 0.2
-=========
+C/igraph 0.2
+============
 
 August 18, 2006
 
