--- a/_posts/2006-08-18-igraph-0.2-r.markdown
+++ b/_posts/2006-08-18-igraph-0.2-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.2
+title: R/igraph 0.2
 date: August 18, 2006
 category: r
 ---
 
-igraph 0.2
-=========
+R/igraph 0.2
+============
 
 August 18, 2006
 
