--- a/_posts/2006-08-23-igraph-0.2.1-c.markdown
+++ b/_posts/2006-08-23-igraph-0.2.1-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.2.1
+title: C/igraph 0.2.1
 date: August 23, 2006
 category: c
 ---
 
-igraph 0.2.1
-=========
+C/igraph 0.2.1
+==============
 
 August 23, 2006
 
