--- a/_posts/2006-08-23-igraph-0.2.1-python.markdown
+++ b/_posts/2006-08-23-igraph-0.2.1-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.2.1
+title: python-igraph 0.2.1
 date: August 23, 2006
 category: python
 ---
 
-igraph 0.2.1
-=========
+python-igraph 0.2.1
+===================
 
 August 23, 2006
 
