--- a/_posts/2006-08-23-igraph-0.2.1-r.markdown
+++ b/_posts/2006-08-23-igraph-0.2.1-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.2.1
+title: R/igraph 0.2.1
 date: August 23, 2006
 category: r
 ---
 
-igraph 0.2.1
-=========
+R/igraph 0.2.1
+==============
 
 August 23, 2006
 
