--- a/_posts/2006-12-19-igraph-0.3.2-c.markdown
+++ b/_posts/2006-12-19-igraph-0.3.2-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.3.2
+title: C/igraph 0.3.2
 date: December 19, 2006
 category: c
 ---
 
-igraph 0.3.2
-============
+C/igraph 0.3.2
+==============
 
 December 19, 2006
 
