--- a/_posts/2006-12-19-igraph-0.3.2-python.markdown
+++ b/_posts/2006-12-19-igraph-0.3.2-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.3.2
+title: python-igraph 0.3.2
 date: December 19, 2006
 category: python
 ---
 
-igraph 0.3.2
-============
+python-igraph 0.3.2
+===================
 
 December 19, 2006
 
