--- a/_posts/2007-02-28-igraph-0.3.3-python.markdown
+++ b/_posts/2007-02-28-igraph-0.3.3-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.3.3
+title: python-igraph 0.3.3
 date: February 28, 2007
 category: python
 ---
 
-igraph 0.3.3
-===========
+python-igraph 0.3.3
+===================
 
 New in the C library
 --------------------
