--- a/_posts/2007-02-28-igraph-0.3.3-r.markdown
+++ b/_posts/2007-02-28-igraph-0.3.3-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.3.3
+title: R/igraph 0.3.3
 date: February 28, 2007
 category: r
 ---
 
-igraph 0.3.3
-===========
+R/igraph 0.3.3
+==============
 
 New in the R interface
 ----------------------
