--- a/_posts/2007-05-21-igraph-0.4-c.markdown
+++ b/_posts/2007-05-21-igraph-0.4-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.4
+title: C/igraph 0.4
 date: May 21, 2007
 category: c
 ---
 
-igraph 0.4
-=========
+C/igraph 0.4
+============
 
 May 21, 2007
 
