--- a/_posts/2007-05-23-igraph-0.4.1-python.markdown
+++ b/_posts/2007-05-23-igraph-0.4.1-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.4.1
+title: python-igraph 0.4.1
 date: May 23, 2007
 category: python
 ---
 
-igraph 0.4.1
-=========
+python-igraph 0.4.1
+===================
 
 May 23, 2007
 
