--- a/_posts/2007-06-07-igraph-0.4.2-python.markdown
+++ b/_posts/2007-06-07-igraph-0.4.2-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.4.2
+title: python-igraph 0.4.2
 date: June 7, 2007
 category: python
 ---
 
-igraph 0.4.2
-=========
+python-igraph 0.4.2
+===================
 
 June 7, 2007
 
