--- a/_posts/2007-06-07-igraph-0.4.2-r.markdown
+++ b/_posts/2007-06-07-igraph-0.4.2-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.4.2
+title: R/igraph 0.4.2
 date: June 7, 2007
 category: r
 ---
 
-igraph 0.4.2
-=========
+R/igraph 0.4.2
+==============
 
 June 7, 2007
 
