--- a/_posts/2007-08-13-igraph-0.4.3-r.markdown
+++ b/_posts/2007-08-13-igraph-0.4.3-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.4.3
+title: R/igraph 0.4.3
 date: August 13, 2007
 category: r
 ---
 
-igraph 0.4.3
-=========
+R/igraph 0.4.3
+==============
 
 August 13, 2007
 
