--- a/_posts/2007-10-03-igraph-0.4.4-c.markdown
+++ b/_posts/2007-10-03-igraph-0.4.4-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.4.4
+title: C/igraph 0.4.4
 date: October 3, 2007
 category: c
 ---
 
-igraph 0.4.4
-=========
+C/igraph 0.4.4
+==============
 
 October 3, 2007
 
