--- a/_posts/2007-10-03-igraph-0.4.4-python.markdown
+++ b/_posts/2007-10-03-igraph-0.4.4-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.4.4
+title: python-igraph 0.4.4
 date: October 3, 2007
 category: python
 ---
 
-igraph 0.4.4
-=========
+python-igraph 0.4.4
+===================
 
 October 3, 2007
 
