--- a/_posts/2007-10-03-igraph-0.4.4-r.markdown
+++ b/_posts/2007-10-03-igraph-0.4.4-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.4.4
+title: R/igraph 0.4.4
 date: October 3, 2007
 category: r
 ---
 
-igraph 0.4.4
-=========
+R/igraph 0.4.4
+==============
 
 October 3, 2007
 
