--- a/_posts/2008-01-01-igraph-0.4.5-python.markdown
+++ b/_posts/2008-01-01-igraph-0.4.5-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.4.5
+title: python-igraph 0.4.5
 date: January 1, 2008
 category: python
 ---
 
-igraph 0.4.5
-=========
+python-igraph 0.4.5
+===================
 
 January 1, 2008
 
