--- a/_posts/2008-02-14-igraph-0.5-c.markdown
+++ b/_posts/2008-02-14-igraph-0.5-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.5
+title: C/igraph 0.5
 date: February 14, 2008
 category: c
 ---
 
-igraph 0.5
-=========
+C/igraph 0.5
+============
 
 February 14, 2008
 
