--- a/_posts/2008-02-14-igraph-0.5-python.markdown
+++ b/_posts/2008-02-14-igraph-0.5-python.markdown
@@ -1,13 +1,13 @@
 ---
 layout: pynewstemp
-title: igraph 0.5
+title: python-igraph 0.5
 date: February 14, 2008
 tags: release
 category: python
 ---
 
-igraph 0.5
-=========
+python-igraph 0.5
+=================
 
 February 14, 2008
 
