--- a/_posts/2008-02-14-igraph-0.5-r.markdown
+++ b/_posts/2008-02-14-igraph-0.5-r.markdown
@@ -1,13 +1,13 @@
 ---
 layout: rnewstemp
-title: igraph 0.5
+title: R/igraph 0.5
 date: February 14, 2008
 tags: release
 category: r
 ---
 
-igraph 0.5
-=========
+R/igraph 0.5
+============
 
 February 14, 2008
 
