--- a/_posts/2008-07-14-igraph-0.5.1-c.markdown
+++ b/_posts/2008-07-14-igraph-0.5.1-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.5.1
+title: C/igraph 0.5.1
 date: July 14, 2008
 category: c
 ---
 
-igraph 0.5.1
-============
+C/igraph 0.5.1
+==============
 
 July 14, 2008
 
