--- a/_posts/2008-07-14-igraph-0.5.1-python.markdown
+++ b/_posts/2008-07-14-igraph-0.5.1-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.5.1
+title: python-igraph 0.5.1
 date: July 14, 2008
 category: python
 ---
 
-igraph 0.5.1
-============
+python-igraph 0.5.1
+===================
 
 July 14, 2008
 
