--- a/_posts/2008-07-14-igraph-0.5.1-r.markdown
+++ b/_posts/2008-07-14-igraph-0.5.1-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.5.1
+title: R/igraph 0.5.1
 date: July 14, 2008
 category: r
 ---
 
-igraph 0.5.1
-============
+R/igraph 0.5.1
+==============
 
 July 14, 2008
 
