--- a/_posts/2009-04-10-igraph-0.5.2-c.markdown
+++ b/_posts/2009-04-10-igraph-0.5.2-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.5.2
+title: C/igraph 0.5.2
 date: April 10, 2009
 category: c
 ---
 
-igraph 0.5.2
-============
+C/igraph 0.5.2
+==============
 
 April 10, 2009
 
