--- a/_posts/2009-04-10-igraph-0.5.2-python.markdown
+++ b/_posts/2009-04-10-igraph-0.5.2-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.5.2
+title: python-igraph 0.5.2
 date: April 10, 2009
 category: python
 ---
 
-igraph 0.5.2
-============
+python-igraph 0.5.2
+===================
 
 April 10, 2009
 
