--- a/_posts/2009-11-22-igraph-0.5.3-r.markdown
+++ b/_posts/2009-11-22-igraph-0.5.3-r.markdown
@@ -1,12 +1,12 @@
 ---
-title: rigraph 0.5.3
+title: R/igraph 0.5.3
 layout: newstemp
 date: November 22, 2009
 category: r
 ---
 
-igraph 0.5.3
-============
+R/igraph 0.5.3
+==============
 
 November 22, 2009
 
