--- a/_posts/2012-06-11-igraph-0.6-c.markdown
+++ b/_posts/2012-06-11-igraph-0.6-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.6
+title: C/igraph 0.6
 date: June 11, 2012
 category: c
 ---
 
-igraph 0.6
-==========
+C/igraph 0.6
+============
 
 June 11, 2012
 
