--- a/_posts/2012-06-11-igraph-0.6-r.markdown
+++ b/_posts/2012-06-11-igraph-0.6-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.6
+title: R/igraph 0.6
 date: June 11, 2012
 category: r
 ---
 
-igraph 0.6
-==========
+R/igraph 0.6
+============
 
 June 11, 2012
 
