--- a/_posts/2013-02-24-igraph-0.6.5-c.markdown
+++ b/_posts/2013-02-24-igraph-0.6.5-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.6.5
+title: C/igraph 0.6.5
 date: February 24, 2013
 category: c
 ---
 
-igraph 0.6.5
-============
+C/igraph 0.6.5
+==============
 
 February 24, 2013
 
