--- a/_posts/2013-02-24-igraph-0.6.5-python.markdown
+++ b/_posts/2013-02-24-igraph-0.6.5-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.6.5
+title: python-igraph 0.6.5
 date: February 24, 2013
 category: python
 ---
 
-igraph 0.6.5
-============
+python-igraph 0.6.5
+===================
 
 February 24, 2013
 
