--- a/_posts/2013-02-24-igraph-0.6.5-r.markdown
+++ b/_posts/2013-02-24-igraph-0.6.5-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.6.5
+title: R/igraph 0.6.5
 date: February 24, 2013
 category: r
 ---
 
-igraph 0.6.5
-============
+R/igraph 0.6.5
+==============
 
 February 24, 2013
 
