--- a/_posts/2013-11-13-igraph-0.7-c.markdown
+++ b/_posts/2013-11-13-igraph-0.7-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.7.0
+title: C/igraph 0.7.0
 date: 2014-02-04
 category: c
 ---
 
-igraph 0.7.0
-============
+C/igraph 0.7.0
+==============
 
 February 4, 2014
 
