--- a/_posts/2013-11-13-igraph-0.7-r.markdown
+++ b/_posts/2013-11-13-igraph-0.7-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.7.0
+title: R/igraph 0.7.0
 date: 2014-02-04
 category: r
 ---
 
-igraph 0.7.0
-============
+R/igraph 0.7.0
+==============
 
 February 4, 2014
 
