--- a/_posts/2014-04-21-igraph-0.7.1-c.markdown
+++ b/_posts/2014-04-21-igraph-0.7.1-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.7.1
+title: C/igraph 0.7.1
 date: 2014-04-21
 category: c
 ---
 
-igraph 0.7.1
-============
+C/igraph 0.7.1
+==============
 
 April 21, 2014
 
