--- a/_posts/2014-04-21-igraph-0.7.1-r.markdown
+++ b/_posts/2014-04-21-igraph-0.7.1-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.7.1
+title: R/igraph 0.7.1
 date: 2014-04-21
 category: r
 ---
 
-igraph 0.7.1
-============
+R/igraph 0.7.1
+==============
 
 April 21, 2014
 
