--- a/_posts/2006-01-30-igraph-0.1-c.markdown
+++ b/_posts/2006-01-30-igraph-0.1-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.1
+title: C/igraph 0.1
 date: January 30, 2006
 category: c
 ---
 
-igraph 0.1
-=========
+C/igraph 0.1
+============
 
 January 30, 2006
 
