--- a/_posts/2006-01-30-igraph-0.1-python.markdown
+++ b/_posts/2006-01-30-igraph-0.1-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.1
+title: python-igraph 0.1
 date: January 30, 2006
 category: python
 ---
 
-igraph 0.1
-=========
+python-igraph 0.1
+=================
 
 January 30, 2006
 
