--- a/_posts/2006-08-18-igraph-0.2-python.markdown
+++ b/_posts/2006-08-18-igraph-0.2-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.2
+title: python-igraph 0.2
 date: August 18, 2006
 category: python
 ---
 
-igraph 0.2
-=========
+python-igraph 0.2
+=================
 
 August 18, 2006
 
