--- a/_posts/2006-12-19-igraph-0.3.2-r.markdown
+++ b/_posts/2006-12-19-igraph-0.3.2-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.3.2
+title: R/igraph 0.3.2
 date: December 19, 2006
 category: r
 ---
 
-igraph 0.3.2
-============
+R/igraph 0.3.2
+==============
 
 December 19, 2006
 
