--- a/_posts/2007-02-28-igraph-0.3.3-c.markdown
+++ b/_posts/2007-02-28-igraph-0.3.3-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.3.3
+title: C/igraph 0.3.3
 date: February 28, 2007
 category: c
 ---
 
-igraph 0.3.3
-===========
+C/igraph 0.3.3
+==============
 
 New in the C library
 --------------------
