--- a/_posts/2007-05-21-igraph-0.4-python.markdown
+++ b/_posts/2007-05-21-igraph-0.4-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.4
+title: python-igraph 0.4
 date: May 21, 2007
 category: python
 ---
 
-igraph 0.4
-=========
+python-igraph 0.4
+=================
 
 May 21, 2007
 
