--- a/_posts/2007-05-21-igraph-0.4-r.markdown
+++ b/_posts/2007-05-21-igraph-0.4-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.4
+title: R/igraph 0.4
 date: May 21, 2007
 category: r
 ---
 
-igraph 0.4
-=========
+R/igraph 0.4
+============
 
 May 21, 2007
 
