--- a/_posts/2007-05-23-igraph-0.4.1-c.markdown
+++ b/_posts/2007-05-23-igraph-0.4.1-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.4.1
+title: C/igraph 0.4.1
 date: May 23, 2007
 category: c
 ---
 
-igraph 0.4.1
-=========
+C/igraph 0.4.1
+==============
 
 May 23, 2007
 
