--- a/_posts/2007-05-23-igraph-0.4.1-r.markdown
+++ b/_posts/2007-05-23-igraph-0.4.1-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.4.1
+title: R/igraph 0.4.1
 date: May 23, 2007
 category: r
 ---
 
-igraph 0.4.1
-=========
+R/igraph 0.4.1
+==============
 
 May 23, 2007
 
