--- a/_posts/2007-06-07-igraph-0.4.2-c.markdown
+++ b/_posts/2007-06-07-igraph-0.4.2-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.4.2
+title: C/igraph 0.4.2
 date: June 7, 2007
 category: c
 ---
 
-igraph 0.4.2
-=========
+C/igraph 0.4.2
+==============
 
 June 7, 2007
 
