--- a/_posts/2007-08-13-igraph-0.4.3-c.markdown
+++ b/_posts/2007-08-13-igraph-0.4.3-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.4.3
+title: C/igraph 0.4.3
 date: August 13, 2007
 category: c
 ---
 
-igraph 0.4.3
-=========
+C/igraph 0.4.3
+==============
 
 August 13, 2007
 
