--- a/_posts/2007-08-13-igraph-0.4.3-python.markdown
+++ b/_posts/2007-08-13-igraph-0.4.3-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.4.3
+title: python-igraph 0.4.3
 date: August 13, 2007
 category: python
 ---
 
-igraph 0.4.3
-=========
+python-igraph 0.4.3
+===================
 
 August 13, 2007
 
