--- a/_posts/2008-01-01-igraph-0.4.5-c.markdown
+++ b/_posts/2008-01-01-igraph-0.4.5-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.4.5
+title: C/igraph 0.4.5
 date: January 1, 2008
 category: c
 ---
 
-igraph 0.4.5
-=========
+C/igraph 0.4.5
+==============
 
 January 1, 2008
 
