--- a/_posts/2008-01-01-igraph-0.4.5-r.markdown
+++ b/_posts/2008-01-01-igraph-0.4.5-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.4.5
+title: R/igraph 0.4.5
 date: January 1, 2008
 category: r
 ---
 
-igraph 0.4.5
-=========
+R/igraph 0.4.5
+==============
 
 January 1, 2008
 
