--- a/_posts/2009-04-10-igraph-0.5.2-r.markdown
+++ b/_posts/2009-04-10-igraph-0.5.2-r.markdown
@@ -1,12 +1,12 @@
 ---
 layout: rnewstemp
-title: igraph 0.5.2
+title: R/igraph 0.5.2
 date: April 10, 2009
 category: r
 ---
 
-igraph 0.5.2
-============
+R/igraph 0.5.2
+==============
 
 April 10, 2009
 
