--- a/_posts/2009-11-22-igraph-0.5.3-c.markdown
+++ b/_posts/2009-11-22-igraph-0.5.3-c.markdown
@@ -1,12 +1,12 @@
 ---
 layout: cnewstemp
-title: igraph 0.5.3
+title: C/igraph 0.5.3
 date: November 22, 2009
 category: c
 ---
 
-igraph 0.5.3
-============
+C/igraph 0.5.3
+==============
 
 November 22, 2009
 
