--- a/_posts/2009-11-22-igraph-0.5.3-python.markdown
+++ b/_posts/2009-11-22-igraph-0.5.3-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.5.3
+title: python-igraph 0.5.3
 date: November 22, 2009
 category: python
 ---
 
-igraph 0.5.3
-============
+python-igraph 0.5.3
+===================
 
 November 22, 2009
 
