--- a/_posts/2012-06-11-igraph-0.6-python.markdown
+++ b/_posts/2012-06-11-igraph-0.6-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.6
+title: python-igraph 0.6
 date: June 11, 2012
 category: python
 ---
 
-igraph 0.6
-==========
+python-igraph 0.6
+=================
 
 June 11, 2012
 
