--- a/_posts/2013-11-13-igraph-0.7-python.markdown
+++ b/_posts/2013-11-13-igraph-0.7-python.markdown
@@ -1,12 +1,12 @@
 ---
 layout: pynewstemp
-title: igraph 0.7.0
+title: python-igraph 0.7.0
 date: 2014-02-04
 category: python
 ---
 
-igraph 0.7.0
-============
+python-igraph 0.7.0
+===================
 
 February 4, 2014
 
