Simpler navbar, simpler news: all together in one list

--- a/_posts/2006-12-19-igraph-0.3.2-python.markdown
+++ b/_posts/2006-12-19-igraph-0.3.2-python.markdown
@@ -1,8 +1,7 @@
 ---
-layout: pynewstemp
 title: python-igraph 0.3.2
 date: December 19, 2006
-category: python
+tags: python
 ---
 
 python-igraph 0.3.2
