--- a/_posts/2007-02-28-igraph-0.3.3-python.markdown
+++ b/_posts/2007-02-28-igraph-0.3.3-python.markdown
@@ -1,8 +1,7 @@
 ---
-layout: pynewstemp
 title: python-igraph 0.3.3
 date: February 28, 2007
-category: python
+tags: python
 ---
 
 python-igraph 0.3.3
