--- a/_posts/2008-01-01-igraph-0.4.5-python.markdown
+++ b/_posts/2008-01-01-igraph-0.4.5-python.markdown
@@ -1,8 +1,7 @@
 ---
-layout: pynewstemp
 title: python-igraph 0.4.5
 date: January 1, 2008
-category: python
+tags: python
 ---
 
 python-igraph 0.4.5
