--- a/_posts/2008-07-14-igraph-0.5.1-python.markdown
+++ b/_posts/2008-07-14-igraph-0.5.1-python.markdown
@@ -1,8 +1,7 @@
 ---
-layout: pynewstemp
 title: python-igraph 0.5.1
 date: July 14, 2008
-category: python
+tags: python
 ---
 
 python-igraph 0.5.1
