--- a/_posts/2009-04-10-igraph-0.5.2-python.markdown
+++ b/_posts/2009-04-10-igraph-0.5.2-python.markdown
@@ -1,8 +1,7 @@
 ---
-layout: pynewstemp
 title: python-igraph 0.5.2
 date: April 10, 2009
-category: python
+tags: python
 ---
 
 python-igraph 0.5.2
