--- a/_posts/2013-02-24-igraph-0.6.5-python.markdown
+++ b/_posts/2013-02-24-igraph-0.6.5-python.markdown
@@ -1,8 +1,7 @@
 ---
-layout: pynewstemp
 title: python-igraph 0.6.5
 date: February 24, 2013
-category: python
+tags: python
 ---
 
 python-igraph 0.6.5
