--- a/_posts/2006-08-23-igraph-0.2.1-python.markdown
+++ b/_posts/2006-08-23-igraph-0.2.1-python.markdown
@@ -1,8 +1,7 @@
 ---
-layout: pynewstemp
 title: python-igraph 0.2.1
 date: August 23, 2006
-category: python
+tags: python
 ---
 
 python-igraph 0.2.1
