--- a/_posts/2007-08-13-igraph-0.4.3-python.markdown
+++ b/_posts/2007-08-13-igraph-0.4.3-python.markdown
@@ -1,8 +1,7 @@
 ---
-layout: pynewstemp
 title: python-igraph 0.4.3
 date: August 13, 2007
-category: python
+tags: python
 ---
 
 python-igraph 0.4.3
