--- a/_posts/2008-02-14-igraph-0.5-python.markdown
+++ b/_posts/2008-02-14-igraph-0.5-python.markdown
@@ -1,9 +1,7 @@
 ---
-layout: pynewstemp
 title: python-igraph 0.5
 date: February 14, 2008
-tags: release
-category: python
+tags: python
 ---
 
 python-igraph 0.5
