--- a/_posts/2009-11-22-igraph-0.5.3-python.markdown
+++ b/_posts/2009-11-22-igraph-0.5.3-python.markdown
@@ -1,8 +1,7 @@
 ---
-layout: pynewstemp
 title: python-igraph 0.5.3
 date: November 22, 2009
-category: python
+tags: python
 ---
 
 python-igraph 0.5.3
