also added a note about decoupling python-igraph's version number

--- a/_posts/2020-02-14-igraph-0.8.0-python.markdown
+++ b/_posts/2020-02-14-igraph-0.8.0-python.markdown
@@ -11,6 +11,11 @@ of igraph to be downloaded at the time when `python-igraph` is installed; the
 tarball of `python-igraph` already bundles the appropriate version of the
 C core in it.
 
+Including the C core directly in the source tarball also allows us to decouple
+python-igraph's version number from the version number of the C core in the
+future. This means that we no longer have to wait for a release of the C core
+in order to fix some bugs in the Python interface.
+
 Precompiled Python wheels
 -------------------------
 
