--- a/_posts/2020-10-02-igraph-0.8.3-c.markdown
+++ b/_posts/2020-10-02-igraph-0.8.3-c.markdown
@@ -31,6 +31,7 @@ This release includes bug fixes and performance improvements. The changelog is b
  - `igraph_community_leiden()`: fixed incorrect result when self-loops are present.
  - `igraph_eigenvector_centrality()`: fixed incorrect value for isolated vertices in weighted graphs.
  - `igraph_eigenvector_centrality()`: corrected the handling of self-loops.
+ - `igraph_layout_reingold_tilford()`: fixed an issue where branches of the tree would sometimes overlap. 
 
 ### Other
 
