--- a/_posts/2021-10-29-igraph-0.9.8-python.markdown
+++ b/_posts/2021-10-29-igraph-0.9.8-python.markdown
@@ -28,7 +28,7 @@ python-igraph` will in turn install the matching version of the
   using `igraph` as soon as possible** to keep on receiving updates after
   September 1, 2022.
 
-* Maintainers that provide pre-packaged versions of `python-igraph` in Linux
+* Maintainers who provide pre-packaged versions of `python-igraph` in Linux
   distributions should switch to following the
   [`igraph`](https://pypi.org/project/igraph) package on PyPI instead of
   `python-igraph`.
