fixes to IGraph/M 0.6.0 announcement

--- a/_posts/2022-07-14-igraph-0.6.0-mma.markdown
+++ b/_posts/2022-07-14-igraph-0.6.0-mma.markdown
@@ -7,15 +7,15 @@ tags: mma
 [IGraph/M](http://szhorvat.net/mathematica/IGraphM) 0.6.0, the Mathematica interface of igraph, is now out! This released is based on the 0.9 series of C/igraph, bringing significant robustness improvements, as well as new features.
 Some of the highlights are an experimental interactive graph editor, contributed by [Kuba Podkalicki](https://github.com/kubaPod/), and experimental support for progress reporting. Apple computers based on the ARM architecture ("Apple Silicon") are now supported.
 
-As always, you can update to the latest version by evaluating
+As always, you can update to the latest version by evaluating the following:
 
 ```
 Get["https://raw.githubusercontent.com/szhorvat/IGraphM/master/IGInstaller.m"]
 ```
 
-The minimum required version of Mathematica is now 11.0, or 12.2 on the Raspberry Pi.
+The earliest supported Mathematica version is now 11.0, or 12.2 on the Raspberry Pi.
 
-Please report any issues you may find at https://github.com/szhorvat/IGraphM/issues/new/choose or on our forum at https://igraph.discourse.group/
+Please report any issues you may find on [GitHub](https://github.com/szhorvat/IGraphM/issues/new/choose) or on [our forum](https://igraph.discourse.group/).
 
 <!--more-->
 
