chore: fix some typos

--- a/_posts/2020-02-14-igraph-0.8.0-python.markdown
+++ b/_posts/2020-02-14-igraph-0.8.0-python.markdown
@@ -38,7 +38,7 @@ support both Python versions.
 As for Python 3, we are committing ourselves to supporting _at least_ the last
 three minor releases of Python 3.
 
-Although we are not suporting PyPy officially, `python-igraph` will also be
+Although we are not supporting PyPy officially, `python-igraph` will also be
 tested with PyPy regularly in a CI environment, and we will strive to fix any
 issues that arise with PyPy. If you use `python-igraph` with PyPy and you are
 willing to become an official maintainer responsible for PyPy compatibility,
