--- a/_posts/2021-11-11-igraph-0.9.5-c.markdown
+++ b/_posts/2021-11-11-igraph-0.9.5-c.markdown
@@ -38,7 +38,7 @@ This release includes bug fixes and performance improvements only.
 
  - Improved the root selection method for disconnected graphs in the
    Reingold-Tilford layout (#1836). The new root selection method provides
-   niceer results if the graph is not a tree, although it is still recommended
+   nicer results if the graph is not a tree, although it is still recommended
    to use the Sugiyama layout instead, unless the input graph is _almost_
    a tree, in which case Reingold-Tilfold may still be preferred.
 
