--- a/_posts/2021-03-23-igraph-0.9.1-c.markdown
+++ b/_posts/2021-03-23-igraph-0.9.1-c.markdown
@@ -16,7 +16,7 @@ minor version bump. The changelog is below.
 
 ### Added
 
- - `igraph_vector_lex_cmp()` and `igrapg_vector_colex_cmp()` for lexicographic
+ - `igraph_vector_lex_cmp()` and `igraph_vector_colex_cmp()` for lexicographic
    and colexicographic comparison of vectors. These functions may also be used
    for sorting.
 
