--- a/_posts/2022-06-13-igraph-1.3.2-r.markdown
+++ b/_posts/2022-06-13-igraph-1.3.2-r.markdown
@@ -6,7 +6,7 @@ tags: r
 
 [R-igraph](https://igraph.org/r/) 1.3.2, the second bugfix release of the 1.3
 series is now released -- and it looks like we forgot to post an announcement
-about 1.3.1, so in the rest of this post we summarnize the changes in versions
+about 1.3.1, so in the rest of this post we summarize the changes in versions
 1.3.1 and 1.3.2 as well.
 
 As always, we tried to do our best not to cause breaking changes for users of
