retarget C/igraph link in R/igraph 2.0 blog post

--- a/_posts/2024-05-21-rigraph-2.0.0.markdown
+++ b/_posts/2024-05-21-rigraph-2.0.0.markdown
@@ -9,8 +9,7 @@ In this post, we highlight the most important changes.
 
 # The R package is now in sync with the C core
 
-This major release brings development in line with the igraph C library
-at [https://github.com/igraph/igraph](https://github.com/igraph/igraph).
+This major release brings development in line with [the igraph C library](https://igraph.org/c/).
 Version 1.6.0 of the R package used version 0.9.10 of the C core. 
 The changes in the 0.10 series of the C core are now taken up in version 2.0 of the R package. 
 Having the R package use the latest version of the C core was a huge undertaking, and is a great milestone which makes the many improvements from version 0.10 of the C core available to R users.
